# batteryDrainTest

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  release-please-config.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-please.yml
battery-drainer/: .gitignore  Cargo.toml  README.md
battery-drainer/src/: main.rs
